es-logstash.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: logstash-application
  namespace: default 
spec:
  template:
    metadata:
      labels:
        app: logstash-application
    spec:
      containers:
      - image: docker.elastic.co/logstash/logstash:6.2.4 
        name: logstash-application
        ports:
        - name: logstash
          containerPort: 5044
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/share/logstash/config/logstash.yml
          subPath: logstash.yml
          readOnly: true
        - name: pipeline
          mountPath: /usr/share/logstash/pipeline
          readOnly: true
        args:
        - -f
        - /usr/share/logstash/pipeline/logstash.conf
        resources:
          limits:
            memory: 2Gi
            cpu: "200m"
          requests:
            memory: 2Gi
            cpu: "200m"
      volumes:
      - name: pipeline
        configMap:
          name: logstash-application
          items:
          - key: logstash.conf
            path: logstash.conf
      - name: config
        configMap:
          name: logstash-application
          items:
          - key: logstash.yml
            path: logstash.yml
---
apiVersion: v1
kind: Service
metadata:
  name: logstash-application
  namespace: default 
  labels:
    app: logstash-application
spec:
  selector:
    app: logstash-application
  ports:
  - name: logstash
    port: 5044 
    targetPort: 5044
    protocol: TCP
