ingress-elasticsearch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /elasticsearch
        backend:
          serviceName: elasticsearch
          servicePort: 9200
