ingress-kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /kibana
        backend:
          serviceName: kibana
          servicePort: 80
