ingress-logstash.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logstash 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /logstash
        backend:
          serviceName: logstash-application 
          servicePort: 5044
